--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ obj/
 # Ignore .idea folder (used by JetBrains IDEs like IntelliJ, WebStorm, PyCharm, etc.)
 .idea/
 
+SlopBalancer.sln.DotSettings.user
 localConfig.json
